# whatsbridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
whatsbridge/: api.py  hooks.py  modules.txt
whatsbridge/config/: desktop.py  docs.py
whatsbridge/fixtures/: property_setter.json
whatsbridge/g2_whats_bridge/doctype/whatsapp_message/: test_whatsapp_message.py  whatsapp_message.js  whatsapp_message.json  whatsapp_message.py
whatsbridge/g2_whats_bridge/doctype/whatsbridge_message_log/: test_whatsbridge_message_log.py  whatsbridge_message_log.js  whatsbridge_message_log.json  whatsbridge_message_log.py
whatsbridge/g2_whats_bridge/doctype/whatsbridge_settings/: test_whatsbridge_settings.py  whatsbridge_settings.js  whatsbridge_settings.json  whatsbridge_settings.py
whatsbridge/g2_whats_bridge/workspace/whats_bridge/: whats_bridge.json
whatsbridge/overrides/: notification.py
whatsbridge/public/js/: notification.js
